# neuromemory-ai

./: .gitignore  EMBEDDING-INTEGRATION.md  LICENSE-COMMERCIAL.md  Oops.rej  PERFORMANCE.md  PHASE1-2-SUMMARY.md  PHASE3-COMPLETE.md  README.md  RELEASE-SUMMARY-v1.0.0.md  demo_full.py  migrate_vectors.py  pyproject.toml
.gid/: graph.yml
.gid/history/: graph.2026-02-05T02-30-58-612Z.yml  graph.2026-02-05T02-30-59-856Z.yml  graph.2026-02-05T02-31-01-074Z.yml  graph.2026-02-05T02-31-02-300Z.yml  graph.2026-02-05T02-35-05-095Z.yml  graph.2026-02-05T02-35-06-335Z.yml  graph.2026-02-05T02-35-07-550Z.yml  graph.2026-02-05T02-35-08-787Z.yml  graph.2026-02-05T02-36-10-793Z.yml  graph.2026-02-05T02-36-12-026Z.yml
benchmarks/: LOCOMO_ANALYSIS.md  LOCOMO_EMBEDDING_RESULTS.md  LOCOMO_RECALL_RESULTS.md  LOCOMO_RESULTS.md  LOCOMO_RESULTS_V2.md  TEMPORAL_BASELINE_COMPARISON.md  TEMPORAL_BENCHMARK_DESIGN.md  TEMPORAL_COMPARISON.md  TEMPORAL_RESULTS.md  ablation_embedding.py  ablation_retrieval.py  ablation_study.py  compare_approaches.py  eval_locomo.py  eval_locomo_embedding.py  eval_locomo_recall.py  eval_locomo_v2.py  eval_temporal.py  eval_temporal_baseline.py  porter_stemmer.py  repeated_access_benchmark.py  temporal_benchmark.json  temporal_benchmark.py  test_long_term.py  test_psychology.py  test_stress.py
docs/: ADVANCED_TESTING_PLAN.md  AGENT_SCENARIOS.md  BENCHMARK_COVERAGE.md  COGNITIVE_MECHANISMS_AUDIT.md  INDUSTRY_BENCHMARKS.md  USAGE.md
docs/paper/: paper.md  paper.tex  references.bib
engram/: EMBEDDING-CONFIG.md  __init__.py  cli.py  engram_tokenizers.py  hybrid_search.py  import_markdown.py  mcp_server.py  memory.py  provider_detection.py  search.py  store.py  vector_store.py
engram-ts/: CHANGELOG.md  README.md  package-lock.json  package.json
engram-ts/src/: core.ts  hybrid_search.ts  index.ts  memory.ts  store.ts  vector_search.ts
engram-ts/src/embeddings/: base.ts  index.ts  mcp.ts  ollama.ts  openai.ts  provider_detection.ts
engram-ts/tests/: e2e.test.ts
engram/embeddings/: __init__.py  base.py  openai.py  sentence_transformers.py
tests/: test_e2e.py  test_edge_cases.py
