[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "engram"
version = "0.1.0"
description = "Neuroscience-grounded memory for AI agents"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = []
keywords = ["memory", "agents", "ai", "neuroscience", "act-r", "cognitive-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tonitangpotato/engram"
Repository = "https://github.com/tonitangpotato/engram"
Issues = "https://github.com/tonitangpotato/engram/issues"

[project.optional-dependencies]
mcp = ["fastmcp"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["engram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
