[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engramai"
version = "0.3.3"
description = "Neuroscience-grounded memory for AI agents"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = []
keywords = ["memory", "agents", "ai", "neuroscience", "act-r", "cognitive-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tonitangpotato/neuromemory-ai"
Repository = "https://github.com/tonitangpotato/neuromemory-ai"
Issues = "https://github.com/tonitangpotato/neuromemory-ai/issues"

[project.scripts]
neuromem = "engram.cli:main"

[project.optional-dependencies]
mcp = ["fastmcp"]
dev = ["pytest"]
chinese = ["jieba>=0.42"]
japanese = ["sudachipy>=0.6", "sudachidict-core>=20230927"]
cjk = ["jieba>=0.42", "sudachipy>=0.6", "sudachidict-core>=20230927"]

[tool.setuptools.packages.find]
include = ["engram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
